--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <link rel="stylesheet" href="build/main.css" />
 </head>
 <body>
-  <div id="sidebar">
-    <ul data-bind="foreach: interviews">
-      <li data-bind="text: name, click: $parent.selectInterview" class="list-item"></li>
+  <div class="content">
+    <div id="map" class="map"></div>
+    <form action="" class="search-bar">
+      <input type="search">
+      <button><i class="search-bar__icon"></i></button>
+    </form>
+    <ul class="content-list" data-bind="foreach: interviews">
+       <li data-bind="text: name, click: $parent.selectInterview" class="list-item"></li>
     </ul>
   </div>
-
-  <div id="map"></div>
-
   <script src="build/bundle.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUjj60Wqnh5kcOjWfvbrmLlvY_yi8FaQY&callback=initApp"
     async defer></script>
