--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="map" class="map"></div>
   <div class="content">
     <form action="" class="search-bar">
-      <input type="search">
+      <input type="search" placeholder="Filter" data-bind="textInput: userInput, event: {keyup: filter}">
       <button><i class="search-bar__icon"></i></button>
     </form>
     <ul class="content-list" data-bind="foreach: visibleMarkersArray">
@@ -26,7 +26,7 @@
               scrolling="no" 
               frameborder="no" 
               src="https://w.soundcloud.com/player/?url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F232788106&show_artwork=true">
-      </iframe>
+      </iframe> 
       -->
     </aside>
   </div>
