Implement API request action on item click

--- a/index.html
+++ b/index.html
@@ -21,13 +21,9 @@
        </li>
     </ul>
     <aside class="story">
-      <!-- 
-      <iframe width="100%" height="166px" 
-              scrolling="no" 
-              frameborder="no" 
-              src="https://w.soundcloud.com/player/?url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F232788106&show_artwork=true">
-      </iframe> 
-      -->
+      <!-- data-bind="html: media" -->
+      <!-- above binding should show select interview media attribute -->
+      <!-- Show last selected interview media --> 
     </aside>
   </div>
   <script src="build/bundle.js"></script>
