Add Soundcloud API integration.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
           <p data-bind="text: interviewee"></p>
        </li>
     </ul>
-    <aside class="story">
-      <!-- data-bind="html: media" -->
-      <!-- above binding should show select interview media attribute -->
-      <!-- Show last selected interview media --> 
+    <aside class="story" data-bind="html: currentMedia">
+      <!-- Show media for selected interview --> 
     </aside>
   </div>
   <script src="build/bundle.js"></script>
