--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </div>
   <script src="build/bundle.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUjj60Wqnh5kcOjWfvbrmLlvY_yi8FaQY&callback=initApp"
+    onerror="googleAPIError()"
     async defer></script>
 </body>
 </html>
